--- a/test/fixtures/tickets.yml
+++ b/test/fixtures/tickets.yml
@@ -1,14 +1,14 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
+valid:
   description: MyText
   pr_url: MyString
   ticket_url: MyString
   status: MyString
   notes: MyText
 
-two:
-  description: MyText
+invalid:
+  description: 
   pr_url: MyString
   ticket_url: MyString
   status: MyString
