--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "5.2.1",
+    "@rails/webpacker": "5.4.2",
+    "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.5.0",
     "turbolinks": "^5.2.0",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12",
     "yarn": "^1.22.10"
   },
   "version": "0.1.0",
